UniqueRef<T>::operator-> shouldn't return a const T* https://bugs.webkit.org/show_bug.cgi?id=281835 rdar://138270047

Reviewed by Chris Dumez.

Align UniqueRef with the behavior of Ref, RefPtr and std::unique_ptr by removing the const transitivity for the operator-> and operator*.
This facilite the adoption of UniqueRef over std::unique_ptr, allowing the use of const UniqueRef members more easily.

Add API test verifying that things still compile.

* Source/WTF/wtf/UniqueRef.h:
(WTF::UniqueRef::operator-> const):
(WTF::UniqueRef::operator* const):
(WTF::UniqueRef::operator->): Deleted.
(WTF::UniqueRef::operator*): Deleted.
* Source/WebCore/bindings/js/WindowProxy.h: Method relied on the constness of object being returned. However it was unused code, so remove it.
* Source/WebCore/bindings/js/WindowProxy.cpp:
(WebCore::WindowProxy::jsWindowProxies const): Deleted.
* Tools/TestWebKitAPI/Tests/WTF/UniqueRef.cpp:
(TestWebKitAPI::TEST(WTF, UniqueRef)):

Canonical link: https://commits.webkit.org/285628@main