Source/WebCore/bindings/js/WindowProxy.h
@@ -57,7 +57,6 @@ public:
 
     void destroyJSWindowProxy(DOMWrapperWorld&);
 
-    ProxyMap::ValuesConstIteratorRange jsWindowProxies() const;
     Vector<JSC::Strong<JSWindowProxy>> jsWindowProxiesAsVector() const;
 
     WEBCORE_EXPORT ProxyMap releaseJSWindowProxies();
